--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <section class="section">
-        <h1 class="title">Animal Face Test</h1>
+        <h1 class="title">Just Try and Have Fun</h1>
         <h2 class="subtitle">What animal do you look like?</h2>
         <h2 class="sr-only">나는 어떤 동물과 닮았을까? 나의 동물상 찾기를 해보세요!</h2>
         <h3 class="sr-only">대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다.</h3>
@@ -367,7 +367,7 @@
                 var labelTitle;
                 switch (prediction[i].className) {
                     case "dog":
-                        labelTitle = "강아지상"
+                        labelTitle = "강hh아지상"
                         break;
                     case "cat":
                         labelTitle = "고양이상"
