--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163919368-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163919368-1');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -42,26 +52,26 @@
 
 <body>
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="https://animalface.site/">Animal Face</a>
+        <a class="navbar-brand" href="https://animalface.me">Animal Face</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About Us
+                    <a class="nav-link" href="#">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
-                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">Q/A</a>
+                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">About Us</a>
                 </li>
             </ul>
         </div>
     </nav>
     <section class="section">
-        <h1 class="title">Just Try and Have Fun</h1>
-        <h2 class="subtitle">What animal do you look like?</h2>
+        <h1 class="title">What animal do you look like?</h1>
+        <h2 class="subtitle">Just Try and Have Fun!!!</h2>
         <h2 class="sr-only">나는 어떤 동물과 닮았을까? 나의 동물상 찾기를 해보세요!</h2>
         <h3 class="sr-only">대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다.</h3>
         <h4 class="sr-only">본 서비스는 Google의 인공지능 teachable machine 2.0을 활용하였습니다.</h4>
@@ -367,28 +377,28 @@
                 var labelTitle;
                 switch (prediction[i].className) {
                     case "dog":
-                        labelTitle = "강hh아지상"
+                        labelTitle = "Dog"
                         break;
                     case "cat":
-                        labelTitle = "고양이상"
+                        labelTitle = "Cat"
                         break;
                     case "rabbit":
-                        labelTitle = "토끼상"
+                        labelTitle = "Rabbit"
                         break;
                     case "dinosaur":
-                        labelTitle = "공룡상"
+                        labelTitle = "Dragon"
                         break;
                     case "bear":
-                        labelTitle = "곰상"
+                        labelTitle = "Bear"
                         break;
                     case "deer":
-                        labelTitle = "사슴상"
+                        labelTitle = "Deer"
                         break;
                     case "fox":
-                        labelTitle = "여우상"
+                        labelTitle = "Fox"
                         break;
                     default:
-                        labelTitle = "알수없음"
+                        labelTitle = "Undifined"
                 }
                 var label = "<div class='animal-label d-flex align-items-center'>" + labelTitle + "</div>"
                 var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
