--- a/index.html
+++ b/index.html
@@ -283,32 +283,32 @@
                 });
                 switch (prediction[0].className) {
                     case "dog":
-                        resultTitle = "귀여운 순둥이 강아지상"
-                        resultExplain = "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 친절하고 활발한 성격으로 어디에서도 인기폭발이며 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!"
+                        resultTitle = “You look like a dog "
+                        resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! With a friendly and active personality, it is a popular explosion everywhere, and it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
                         resultCeleb = "강아지상 연예인: 강다니엘, 백현(엑소), 박보검, 송중기"
                         gtag('event', '남자 결과 강아지상', {'event_category': '남자 결과'});
                         break;
                     case "cat":
-                        resultTitle = "츤데레 매력쟁이 고양이상"
-                        resultExplain = "무뚝뚝한 당신의 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 연인에게는 은근히 애교쟁이다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!"
+                        resultTitle = “you look like a cat”
+                        resultExplain = "Your blunt first impression looks cool, but it is always popular due to its strange charm. Pride is the world's No. 1, but likes to get attention, and it's a secret love for lovers. You're like a cat that constantly thrills your lover with a chic tsundere!"
                         resultCeleb = "고양이상 연예인: 황민현(뉴이스트), 시우민(엑소), 강동원, 이종석, 이준기"
                         gtag('event', '남자 결과 고양이상', {'event_category': '남자 결과'});
                         break;
                     case "rabbit":
-                        resultTitle = "천진난만한 매력의 토끼상"
-                        resultExplain = "천진난만하고 귀여운 당신은 주변 사람들에게 기쁨을 주는 행복바이러스다! 호기심이 많아 활발하며 귀엽고 순수한 외모로 연인의 보호본능을 자극한다. 존재 자체가 상큼한 당신은 특별한 애교 없이도 연인에게 너무나도 사랑스럽다!"
+                        resultTitle = “You look like a rabbit”
+                        resultExplain = "Innocent and cute you are a happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You, who are fresh in existence, are so lovely for lovers without any special charm!"
                         resultCeleb = "토끼상 연예인: 정국(방탄소년단), 바비(아이콘), 박지훈(워너원), 수호(엑소)"
                         gtag('event', '남자 결과 토끼상', {'event_category': '남자 결과'});
                         break;
                     case "dinosaur":
-                        resultTitle = "따뜻한 나쁜남자 공룡상"
-                        resultExplain = "무심한 성격에 첫인상은 나쁜 남자 같지만, 알고 보면 따뜻함이 묻어나는 당신! 시크한 매력에 선뜻 다가가지 못하지만 한번 다가가면 헤어나올 수 없는 터프한 매력을 가진 카리스마 있는 남자다."
+                        resultTitle = “You look like a dragon”
+                        resultExplain = "The indifferent personality, the first impression is like a bad man, but when you know it, you get warm! He is a charismatic man who can't get close to the chic charm, but has a tough charm that he can't escape once he approaches.."
                         resultCeleb = "공룡상 연예인: 윤두준(하이라이트), 이민기, 김우빈, 육성재(비투비), 공유"
                         gtag('event', '남자 결과 공룡상', {'event_category': '남자 결과'});
                         break;
                     case "bear":
-                        resultTitle = "포근한 매력의 곰상"
-                        resultExplain = "첫 인상은 무서워 보이지만 알고 보면 귀여운 매력의 당신! 꼼꼼하고 섬세한 성격으로 연인을 헌신적으로 챙겨주는 당신은 연인에게 듬직한 존재! 포근한 매력에 듬직함까지 갖춘 최고의 남자다!"
+                        resultTitle = “You look like a bear”
+                        resultExplain = "The first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warmth and warmth!"
                         resultCeleb = "곰상 연예인: 마동석, 조진웅, 조세호, 안재홍"
                         gtag('event', '남자 결과 곰상', {'event_category': '남자 결과'});
                         break;
@@ -325,32 +325,32 @@
                 });
                 switch (prediction[0].className) {
                     case "dog":
-                        resultTitle = "귀여운 순둥이 강아지상"
-                        resultExplain = "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!"
+                        resultTitle = “You look like a dog”
+                        resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
                         resultCeleb = "강아지상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민"
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
                     case "cat":
-                        resultTitle = "츤데레 매력쟁이 고양이상"
-                        resultExplain = "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!"
+                        resultTitle = “You look like a cat”
+                        resultExplain = "You're sturdy and sexy, but the first impression looks cool, but it's always popular because of its strange charm. The pride is like the world's first place, but it has a cute charm that knows how to be amiable and loves to be attracted to lovers. You're like a cat that constantly thrills your lover!"
                         resultCeleb = "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리"
                         gtag('event', '여자 결과 고양이상', {'event_category': '여자 결과'});
                         break;
                     case "rabbit":
-                        resultTitle = "상큼발랄한 매력의 토끼상"
-                        resultExplain = "발랄하고 귀여운 당신은 주변 사람들에게 기쁨을 주는 행복바이러스다! 호기심이 많아 활발하며 귀엽고 순수한 외모로 연인의 보호본능을 자극한다. 존재 자체가 상큼하고 깜찍한 당신은 특별한 애교 없이도 연인에게 너무나도 사랑스럽다!"
+                        resultTitle = “You look like a rabbit”
+                        resultExplain = "You are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and cute without a special charm that you are so fresh and cute.!"
                         resultCeleb = "토끼상 연예인: 수지, 나연(트와이스), 예린(여자친구), 한승연(카라), 문채원"
                         gtag('event', '여자 결과 토끼상', {'event_category': '여자 결과'});
                         break;
                     case "deer":
-                        resultTitle = "온순하고 우아한 사슴상"
-                        resultExplain = "맑고 영롱한 분위기의 당신은 사슴처럼 차분한 성격의 소유자다. 초롱초롱한 눈망울이 당신의 가장 큰 트레이드마크며 따스하고 온순한 눈빛을 가져 사랑스러움을 항상 머금고 있다! 부끄러움이 많아 애정표현이 낯설은 당신은 연인에게조차 신비한 존재지만 따뜻한 성격으로 연인의 마음을 사로잡는 능력을 가졌다."
+                        resultTitle = “You look like a deer”
+                        resultExplain = "You in a clear and bright atmosphere are the owners of a calm character like a deer. The lustrous eyes are your biggest trademark, and you always have loveliness with warm and gentle eyes! Is a mystery even to lovers, but with a warm personality, he has the ability to capture the hearts of lovers."
                         resultCeleb = "사슴상 연예인: 윤아(소녀시대), 이연희, 고아라, 문근영, 정유미(부산행 배우)"
                         gtag('event', '여자 결과 사슴상', {'event_category': '여자 결과'});
                         break;
                     case "fox":
-                        resultTitle = "섹시한 밀당고수 여우상"
-                        resultExplain = "사람을 홀리는 매력을 가진 당신은 선뜻 다가가기 힘든 섹시한 매력을 가졌다. 우아한 외모에 더해 뛰어난 센스의 성격을 가진 당신은 어딜가도 주목받는 주인공이다! 사교적인 성격을 가져 연인에게도 적극적으로 애정표현을 하지만 밀당의 고수인 당신은 연인의 혼을 쏙 빼놓는 매력쟁이다."
+                        resultTitle = “You look like a fox”
+                        resultExplain = "You have a sexy charm that is hard to reach. In addition to the elegant appearance, you are a prominent character wherever you are with outstanding sense of character! With a sociable personality, he actively expresses affection to his lover, but you, the master of the secret party, are a charmer who easily pulls out the lover's soul.."
                         resultCeleb = "여우상 연예인: 경리(나인뮤지스), 예지(있지), 한혜진(모델), 헤이즈, 지연(티아라)"
                         gtag('event', '여자 결과 여우상', {'event_category': '여자 결과'});
                         break;
