--- a/index.html
+++ b/index.html
@@ -285,31 +285,31 @@
                     case "dog":
                         resultTitle = "You look like a dog"
                        resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
-                        resultCeleb = "강아지상 연예인: 강다니엘, 백현(엑소), 박보검, 송중기"
+                        resultCeleb = ""
                         gtag('event', '남자 결과 강아지상', {'event_category': '남자 결과'});
                         break;
                     case "cat":
                         resultTitle = "You look like a cat"
                         resultExplain = "Your blunt first impression looks cool, but it is always popular due to its strange charm. Pride is the world's No. 1, but likes to get attention, and it's a secret love for lovers. You're like a cat that constantly thrills your lover!"
-                        resultCeleb = "고양이상 연예인: 황민현(뉴이스트), 시우민(엑소), 강동원, 이종석, 이준기"
+                        resultCeleb = ""
                         gtag('event', '남자 결과 고양이상', {'event_category': '남자 결과'});
                         break;
                     case "rabbit":
                         resultTitle = "You look like a rabbit"
                         resultExplain = "Innocent and cute you are a happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You, who are fresh in existence, are so lovely for lovers without any special charm!"
-                        resultCeleb = "토끼상 연예인: 정국(방탄소년단), 바비(아이콘), 박지훈(워너원), 수호(엑소)"
+                        resultCeleb = ""
                         gtag('event', '남자 결과 토끼상', {'event_category': '남자 결과'});
                         break;
                     case "dinosaur":
                         resultTitle = "You look like a dragon"
                         resultExplain = "The indifferent personality, the first impression is like a bad man, but when you know it, you get warm! He is a charismatic man who can't get close to the chic charm, but has a tough charm that he can't escape once he approaches!"
-                        resultCeleb = "공룡상 연예인: 윤두준(하이라이트), 이민기, 김우빈, 육성재(비투비), 공유"
+                        resultCeleb = ""
                         gtag('event', '남자 결과 공룡상', {'event_category': '남자 결과'});
                         break;
                     case "bear":
                         resultTitle = "You look like a bear"
                         resultExplain = "The first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warmth and warmth!"
-                        resultCeleb = "곰상 연예인: 마동석, 조진웅, 조세호, 안재홍"
+                        resultCeleb = ""
                         gtag('event', '남자 결과 곰상', {'event_category': '남자 결과'});
                         break;
                     default:
@@ -327,31 +327,31 @@
                     case "dog":
                         resultTitle = "You look like a dog"
                        resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
-                        resultCeleb = "강아지상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민"
+                        resultCeleb = ""
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
                     case "cat":
                         resultTitle = "You look like a cat"
                         resultExplain = "Your blunt first impression looks cool, but it is always popular due to its strange charm. Pride is the world's No. 1, but likes to get attention, and it's a secret love for lovers. You're like a cat that constantly thrills your lover!"
-                        resultCeleb = "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리"
+                        resultCeleb = ""
                         gtag('event', '여자 결과 고양이상', {'event_category': '여자 결과'});
                         break;
                     case "rabbit":
                         resultTitle = "You look like a rabbit"
                         resultExplain = "You are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and cute without a special charm that you are so fresh and cute!"
-                        resultCeleb = "토끼상 연예인: 수지, 나연(트와이스), 예린(여자친구), 한승연(카라), 문채원"
+                        resultCeleb = ""
                         gtag('event', '여자 결과 토끼상', {'event_category': '여자 결과'});
                         break;
                     case "deer":
                         resultTitle = "You look like a deer"
                         resultExplain = "ou are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and cute without a special charm that you are so fresh and cute!"
-                        resultCeleb = "사슴상 연예인: 윤아(소녀시대), 이연희, 고아라, 문근영, 정유미(부산행 배우)"
+                        resultCeleb = ""
                         gtag('event', '여자 결과 사슴상', {'event_category': '여자 결과'});
                         break;
                     case "fox":
                         resultTitle = "You look like a fox"
                         resultExplain = "You in a clear and bright atmosphere are the owners of a calm character like a deer. The lustrous eyes are your biggest trademark, and you always have loveliness with warm and gentle eyes! Is a mystery even to lovers, but with a warm personality, he has the ability to capture the hearts of lovers!"
-                        resultCeleb = "여우상 연예인: 경리(나인뮤지스), 예지(있지), 한혜진(모델), 헤이즈, 지연(티아라)"
+                        resultCeleb = ""
                         gtag('event', '여자 결과 여우상', {'event_category': '여자 결과'});
                         break;
                     default:
