--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 switch (prediction[0].className) {
                     case "dog":
                         resultTitle = "You look like a dog"
-                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
+                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely."
                         resultCeleb = ""
                         gtag('event', '남자 결과 강아지상', {'event_category': '남자 결과'});
                         break;
@@ -308,7 +308,7 @@
                         break;
                     case "bear":
                         resultTitle = "You look like a bear"
-                        resultExplain = "The first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warmth and warmth!"
+                        resultExplain = "TThe first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warm charm and heaviness!"
                         resultCeleb = ""
                         gtag('event', '남자 결과 곰상', {'event_category': '남자 결과'});
                         break;
@@ -326,7 +326,7 @@
                 switch (prediction[0].className) {
                     case "dog":
                         resultTitle = "You look like a dog"
-                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely.!"
+                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely."
                         resultCeleb = ""
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
