--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         break;
                     case "bear":
                         resultTitle = "You look like a bear"
-                        resultExplain = "TThe first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warm charm and heaviness!"
+                        resultExplain = "The first impression looks scary, but if you know it, you are cute! With a meticulous and delicate personality, you are a sturdy being for a lover who devotedly takes care of him! He is the best man with warm charm and heaviness!"
                         resultCeleb = ""
                         gtag('event', '남자 결과 곰상', {'event_category': '남자 결과'});
                         break;
