--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div id="addthis" class="addthis_inline_share_toolbox_lymr"></div>
              
             <div class="pt-3 image-title-wrap">
-                <button ty pe="button p-2" class="try-again-btn" onclick="gaReload1();" data-toggle="modal" data-target="#adModal">
+                <button type="button p-2" class="try-again-btn" onclick="gaReload2();">
                     <span class="try-again-text">TRY AGAIN</span>
                 </button>
             </div>
@@ -133,6 +133,10 @@
                 "id": 141621,
                 "subId": null
             });
+			<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+	new PartnersCoupang.G({ id:223357 });
+</script>
         </script>
     </div>
    
