--- a/index.html
+++ b/index.html
@@ -127,13 +127,11 @@
         </div>
     </div>
     <div id="coupang" class="container d-flex justify-content-center">
-        <script src="https://ads-partners.coupang.com/g.js"></script>
-        <script>
-            new PartnersCoupang.G({
-                "id": 223357,
-                "subId": null
-            });
-        </script>
+      <script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+	new PartnersCoupang.G({ id:223357 });
+</script>
+       
 		
     </div>
    
