--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
         </div>
     </div>
     <div id="coupang" class="container d-flex justify-content-center">
-      <script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-	new PartnersCoupang.G({ id:223357 });
-</script>
-       
+        <script src="https://ads-partners.coupang.com/g.js"></script>
+        <script>
+            new PartnersCoupang.G({
+                "id": 223357,
+                "subId": null
+            });
+        </script>
 		
     </div>
    
