--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
             </div>
         </div>
     </div>
+	
+	
     <div id="coupang" class="container d-flex justify-content-center">
         <script src="https://ads-partners.coupang.com/g.js"></script>
         <script>
@@ -134,7 +136,7 @@
                 "subId": null
             });
         </script>
-    </div>zz
+    </div>
    
     
           
@@ -144,7 +146,7 @@
     </div>
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; Animal Face 2020. All Rights Reserved. </p>
+            <p>&copy; Animalz Face 2020. All Rights Reserved. </p>
 <!--            
         <ul class="list-inline d-flex justify-content-center">
             <li class="list-inline-item">
