--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Animal Face Test</title>
-    <meta name="title" content="동물상 테스트">
-    <meta name="subject" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요!">
-    <meta name="keywords" content="동물상 테스트, 인공지능 동물상 테스트, 얼굴상, 얼굴상 테스트, 나와 닮은 동물, 동물상 찾기, 얼굴로 보는 동물상, 얼굴 동물, 동물얼굴, animalface, 강아지상, 고양이상, 여우상, 사슴상, 토끼상, 곰상, 공룡상, 인공지능 동물상, AI 얼굴상, AI 동물상">
+    <meta name="title" content="Animal Face Test">
+    <meta name="subject" content="What animal do you look like?">
+    <meta name="keywords" content="Animal test, artificial intelligence animal test, face test, face test, animal that resembles me, find fauna, face looking animals, face animals, animal faces, animalface, puppy, cat, fox, deer, rabbit Statue, bear image, dinosaur image, AI fauna, AI face image, AI animal상">
     <meta name="author" content="komallone">
     <link rel="stylesheet" href="style.css">
     <link rel="canonical" href="https://animalface.me" />
     <meta property="og:url" content="https://animalface.me" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Animal Face Test" />
-    <meta property="og:description" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요! 대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 동물상 테스트 한번 해보세요! 강아지상? 고양이상? 여우상? 사슴상? 토끼상? 곰상? 공룡상? 얼굴상 테스트를 통해 나와 닮은 동물 찾기를 할 수 있습니다."
+    <meta property="og:description" content="Artificial intelligence fauna test with your face, find a fauna that resembles me! Artificial intelligence learned from representative animal celebrity photo data will find fauna and features with my face. Please check directly from the screen without registering! No picture data is transmitted anywhere. Take a test of my fauna that AI sees! Puppy statue? Cat statue? Fox statue? Deer statue? Rabbit statue? Bear statue? Dinosaur statue? Face testing allows you to find animals that resemble you."
     />
     <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -72,10 +72,10 @@
     <section class="section">
         <h1 class="title">What animal do you look like?</h1>
         <h2 class="subtitle">Just Try and Have Fun!!</h2>
-        <h2 class="sr-only">나는 어떤 동물과 닮았을까? 나의 동물상 찾기를 해보세요!</h2>
-        <h3 class="sr-only">대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다.</h3>
-        <h4 class="sr-only">본 서비스는 Google의 인공지능 teachable machine 2.0을 활용하였습니다.</h4>
-        <p class="sr-only">얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요! 대표 동물상 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 동물상과 특징을 찾아드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 동물상 테스트 한번 해보세요! 강아지상? 고양이상? 여우상? 사슴상? 토끼상? 곰상? 공룡상? 얼굴상 테스트를 통해 나와 닮은 동물 찾기를 할 수 있습니다.</p>
+        <h2 class="sr-only">What animal do I resemble? Try to find my fauna!</h2>
+        <h3 class="sr-only">Artificial intelligence learned from representative animal celebrity photo data will find fauna and features with my face.</h3>
+        <h4 class="sr-only">This service utilizes Google's AI teachable machine 2.0.</h4>
+        <p class="sr-only">얼Artificial Intelligence fauna test in oysters, find a fauna that resembles me! Artificial intelligence learned from representative animal celebrity photo data will find fauna and features with my face. Please check directly from the screen without registering! No picture data is transmitted anywhere. Take a test of my fauna that AI sees! Puppy statue? Cat statue? Fox statue? Deer statue? Rabbit statue? Bear statue? Dinosaur statue? Face testing allows you to find animals that resemble you.</p>
     </section>
     <section class="youtube pb-3" id="yotube-mid-link">
         <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '화면 중간'});">
