--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                     </a>
                 </li>
                 <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
-                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">About Us</a>
+                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">iOS App</a>
+                </li>
+				 <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
+                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">Android App</a>
                 </li>
             </ul>
         </div>
@@ -127,7 +130,7 @@
         </div>
     </div>
 	
-	
+ <!--	
     <div id="coupang" class="container d-flex justify-content-center">
         <script src="https://ads-partners.coupang.com/g.js"></script>
         <script>
@@ -137,7 +140,7 @@
             });
         </script>
     </div>
- <!--
+
     <div class="mt-2 container d-flex justify-content-center ad-banner">
         <ins class="kakao_ad_area" style="display:none;" 
      data-ad-unit    = "DAN-1jefy9znk6ibb" 
