--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; Animal Face 2020. All Rights Reserved. </p>
+            <p>&copy; Animal Face 2020 inspried by Jocoding. All Rights Reserved. </p>
 <!--            
         <ul class="list-inline d-flex justify-content-center">
             <li class="list-inline-item">
