--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">iOS App</a>
                 </li>
 				 <li class="nav-item active" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '상단 메뉴'});">
-                    <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/">Android App</a>
+                    <a class="nav-link" id="yotube-top-link" href="ttps://drive.google.com/file/d/1hnZBkKkgq2oIkI-ytfi6sl5YerGXCcy_/view?usp=drivesdk/">Android App</a>
                 </li>
             </ul>
         </div>
