--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         break;
                     case "rabbit":
                         resultTitle = "You look like a rabbit"
-                        resultExplain = "Innocent and cute you are a happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You, who are fresh in existence, are so lovely for lovers without any special charm!"
+                        resultExplain = "You are nnocent and cute, you are a happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You, who are fresh in existence, are so lovely for lovers without any special charm!"
                         resultCeleb = ""
                         gtag('event', '남자 결과 토끼상', {'event_category': '남자 결과'});
                         break;
@@ -344,31 +344,30 @@
                 switch (prediction[0].className) {
                     case "dog":
                         resultTitle = "You look like a dog"
-                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely."
+                       resultExplain = "YYou are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
                     case "cat":
                         resultTitle = "You look like a cat"
-                        resultExplain = "Your blunt first impression looks cool, but it is always popular due to its strange charm. Pride is the world's No. 1, but likes to get attention, and it's a secret love for lovers. You're like a cat that constantly thrills your lover!"
+                        resultExplain = "You're sturdy and sexy, but the first impression looks cool, but it's always popular because of its strange charm. The pride is like the world's first place, but it has a cute charm that knows how to be amiable and loves to be attracted to lovers. You are like a cat, who constantly excites your lover with a chic tsundere.!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 고양이상', {'event_category': '여자 결과'});
                         break;
                     case "rabbit":
-                        resultTitle = "You look like a rabbit"
-                        resultExplain = "You are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and cute without a special charm that you are so fresh and cute!"
+                        resultTitle = "It is a lively, cute and pure appearance that stimulates the protective instincts of lovers. Being spontaneous and cute, you are a happy virus that brings joy to those around you! You are so curious that you are so refreshing and cute that you are so lovely for your lover without any special charm!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 토끼상', {'event_category': '여자 결과'});
                         break;
                     case "deer":
                         resultTitle = "You look like a deer"
-                        resultExplain = "ou are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and cute without a special charm that you are so fresh and cute!"
+                        resultExplain = "You are the biggest trademark, and you have a warm and gentle look, and you are an owner of a calm character like a deer. I always keep my eyes glowing! You, who have a lot of embarrassment and are unfamiliar with affection, are mysterious even to lovers, but with a warm personality, they have the ability to capture their hearts!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 사슴상', {'event_category': '여자 결과'});
                         break;
                     case "fox":
                         resultTitle = "You look like a fox"
-                        resultExplain = "You in a clear and bright atmosphere are the owners of a calm character like a deer. The lustrous eyes are your biggest trademark, and you always have loveliness with warm and gentle eyes! Is a mystery even to lovers, but with a warm personality, he has the ability to capture the hearts of lovers!"
+                        resultExplain = "You have a sexy charm that is hard to reach. In addition to the elegant appearance, you are a prominent character wherever you are with outstanding sense of character! With a sociable personality, he actively expresses affection to his lover, but you, the master of the secret party, are a charmer who can easily get rid of the lover's soul.!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 여우상', {'event_category': '여자 결과'});
                         break;
