--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 switch (prediction[0].className) {
                     case "dog":
                         resultTitle = "You look like a dog"
-                       resultExplain = "YYou are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely!"
+                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
