--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 switch (prediction[0].className) {
                     case "dog":
                         resultTitle = "You look like a dog"
-                       resultExplain = "You are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely!"
+                       resultExplain = "YYou are sweet and cute, and you are a crush-like person who brings joy to everyone! It is a popular explosion anywhere because of its gentle and active personality, but it is especially lovely for lovers because it has a lot of love and laughter. If you don't have your lover's attention due to your lover's wishes, you will feel dark and lonely!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 강아지상', {'event_category': '여자 결과'});
                         break;
@@ -354,8 +354,9 @@
                         resultCeleb = ""
                         gtag('event', '여자 결과 고양이상', {'event_category': '여자 결과'});
                         break;
-                    case "rabbit":
-                        resultTitle = "It is a lively, cute and pure appearance that stimulates the protective instincts of lovers. Being spontaneous and cute, you are a happy virus that brings joy to those around you! You are so curious that you are so refreshing and cute that you are so lovely for your lover without any special charm!"
+                   case "rabbit":
+                        resultTitle = "Rabbit"
+                        resultExplain = "You are a cheerful and happy virus that brings joy to those around you! With a lot of curiosity, it stimulates the protective instincts of lovers with an active, cute and pure appearance. You are so cute and sweet to your lover without any special charm!"
                         resultCeleb = ""
                         gtag('event', '여자 결과 토끼상', {'event_category': '여자 결과'});
                         break;
