--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="keywords" content="한국의 야생화">
     <meta name="author" content="komallone">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://nowkorea.com" />
-    <meta property="og:url" content="https://nowkorea.com" />
+    <link rel="canonical" href="https://animalface.me.com" />
+    <meta property="og:url" content="https://animalface.me" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="한국의 야생화" />
     <meta property="og:description" content="야생화 사진 데이터로 학습한 인공지능이 야생화의 이름과 설명을 찾아드립니다." />
