--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Animal Face Test</title>
-    <meta name="title" content="한국의 야생화">
+    <meta name="title" content="Animal Face Test">
     <meta name="subject" content="얼굴로 보는 인공지능 동물상 테스트, 나와 닮은 동물상을 찾아보세요!">
-    <meta name="keywords" content="한국의 야생화">
+    <meta name="keywords" content="Animal Face Test">
     <meta name="author" content="komallone">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://animalface.me.com" />
+    <link rel="canonical" href="https://animalface.me" />
     <meta property="og:url" content="https://animalface.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="한국의 야생화" />
-    <meta property="og:description" content="야생화 사진 데이터로 학습한 인공지능이 야생화의 이름과 설명을 찾아드립니다." />
+    <meta property="og:title" content="Animal Face Test" />
+    <meta property="og:description" content="얼굴사진 데이터로 학습한 인공지능이 동물상을 찾아드립니다." />
     <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
