--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <!--CUSTOM SCRIPTS-->
                 <script src="assets/js/custom.js"></script>
 
-            
+   <!--         
     <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
     <div class="container">
       <div class="row">
@@ -448,7 +448,7 @@
           <div class="section-title">
             <h2 class="head-title">Gallery</h2>
             <hr class="botm-line">
-        <!--    <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p> -->
+           <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p> 
           </div>
         </div>
         <div class="col-md-9 col-sm-12">
@@ -485,7 +485,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
   <!---->      
 		
 		<div class="ad-banner">
