--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
             <div class="drag-text">
                 <img src="img/upload.svg" class="mt-5 pt-5 upload">
-                <h3 class="mb-5 pb-5 pt-4  upload-text">DRAG AND DROP A IMAGE FILE OR CLICK THE BUTTON</h3>
+                <h3 class="mb-5 pb-5 pt-4  upload-text">DRAG AND DROP AN IMAGE FILE OR CLICK THE BUTTON</h3>
             </div>
         </div>
         <div class="file-upload-content">
