--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
                         }
                     }
                 </script>
+ <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ea9dd0e7ffa2444"></script> 
 
                 <!--CORE SCRIPTS-->
                 <script src="assets/js/jquery-1.11.1.js"></script>
