--- a/index.html
+++ b/index.html
@@ -507,10 +507,11 @@
   <!---->      
 		
 		<div class="ad-banner">
-		<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-t89oh3sc0ew5"
+		<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1jeo9lj6klk50" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>	
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
           
   <!---->
